Added a new component to Generate Random Person Data and added some embedded json files for names.

--- a/BlazorMinimalAPI.csproj
+++ b/BlazorMinimalAPI.csproj
@@ -11,4 +11,10 @@
     <Folder Include="Database Logic\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Static Json Data\FirstNames.json" />
+    <EmbeddedResource Include="Static Json Data\LastNames.json" />
+    <EmbeddedResource Include="Static Json Data\Occupations.json" />
+  </ItemGroup>
+
 </Project>
