--- a/BlazorMinimalAPI.csproj
+++ b/BlazorMinimalAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,13 +8,20 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Database Logic\" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Static Json Data\FirstNames.json" />
     <EmbeddedResource Include="Static Json Data\LastNames.json" />
     <EmbeddedResource Include="Static Json Data\Occupations.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
