--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-9UC1HB4;Database=BlazorMinimalAPIDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+  }
 }
