Docker Change + DockerFile + Compose File

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,10 @@
   },
   "AllowedHosts": "*",
 
+  
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-9UC1HB4;Database=BlazorMinimalAPIDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+    "DockerConnection": "Server=localhost,11433;Database=BlazorMinimalAPIDB;User Id=sa;Password=GoodPassword123!;Encrypt=True;TrustServerCertificate=True;",
+    "LocalConnection": "Server=DESKTOP-9UC1HB4;Database=BlazorMinimalAPIDB;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
   }
+  
 }
